--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             margin: 0px;
             padding: 0px;
             font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
 
         }
         body{
@@ -59,6 +60,7 @@
 
 <body>
     <div class="main">
+        <h3>Social Links</h3>
        <a href="https://www.Youtube.com" class="yt">Youtube</a>
        <a href="https://www.GirHub.com" class="Gh">GirHub</a>
        <a href="https://www.Linkdin.com" class="Ln">Linkdin</a>
