--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <h3>Social Links</h3>
        <a href="https://www.Youtube.com" class="yt">Youtube</a>
        <a href="https://www.GirHub.com" class="Gh">GirHub</a>
-       <a href="https://www.Linkedln.com" class="Ln">Linkdin</a>
-       <a href="https://www.WhatsApp.com" class="Wa">WhatApp</a>
+       <a href="https://www.Linkedln.com" class="Ln">Linkedln</a>
+       <a href="https://www.WhatsApp.com" class="Wa">WhatsApp</a>
     </div>
     
 </body>
