--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="main">
         <h3>Social Links</h3>
        <a href="https://www.Youtube.com" class="yt">Youtube</a>
-       <a href="https://www.GirHub.com" class="Gh">GirHub</a>
+       <a href="https://www.GitHub.com" class="Gh">GirHub</a>
        <a href="https://www.Linkedln.com" class="Ln">Linkedln</a>
        <a href="https://www.WhatsApp.com" class="Wa">WhatsApp</a>
     </div>
